not sure what im doing, help

--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -56,8 +56,8 @@ this page provides a comprehensive list of the default keybindings in `rovr`. yo
 | preview_scroll_right         | <kbd>right</kbd> <kbd>l</kbd>                                                 | Scroll right           |
 | preview_select_right         | <kbd>shift+right</kbd> <kbd>L</kbd>                                           | Select right           |
 | preview_select_left          | <kbd>shift+left</kbd> <kbd>H</kbd>                                            | Select left            |
-| show_keybinds                | <kbd>question_mark</kbd>                                                      | Show keybinds          |
-| change_sort_order            | <kbd>comma</kbd>                                                              | Change sort order      |
+| show_keybinds                | <kbd>?</kbd>                                                                  | Show keybinds          |
+| change_sort_order            | <kbd>,</kbd>                                                                  | Change sort order      |
 | quit_app                     | <kbd>q</kbd> <kbd>ctrl+q</kbd>                                                | Quit app               |
 | command_palette              | <kbd>c</kbd> <kbd>t</kbd> <kbd>r</kbd> <kbd>l</kbd> <kbd>+</kbd> <kbd>p</kbd> | Launch command palette |
 | suspend_app                  | <kbd>ctrl+z</kbd>                                                             | Suspend app            |
