--- a/docs/src/content/docs/guides/tips-and-tricks.mdx
+++ b/docs/src/content/docs/guides/tips-and-tricks.mdx
@@ -26,7 +26,7 @@ pin frequently accessed directories for quick access:
 
 ### quick jumping
 - **ctrl+l**: focus path switcher, similarly to `explorer.exe`
-- **f**: if `plugins.finder` is enabled, search for something in the current directory recursively using `fd`
+- **f**: if `plugins.fd` is enabled, search for something in the current directory recursively using `fd`
 - **z**: if `plugins.zoxide` is enabled, use `zoxide` to go to another directory
 
 ## file operations
