update keybinds and schema

--- a/docs/src/content/docs/reference/keybindings.mdx
+++ b/docs/src/content/docs/reference/keybindings.mdx
@@ -59,12 +59,26 @@ this page provides a comprehensive list of the default keybindings in `rovr`. yo
 | preview_select_right         | <kbd>shift+right</kbd> <kbd>L</kbd>            | Select right           |
 | preview_select_left          | <kbd>shift+left</kbd> <kbd>H</kbd>             | Select left            |
 | show_keybinds                | <kbd>?</kbd>                                   | Show keybinds          |
-| change_sort_order            | <kbd>,</kbd>                                   | Change sort order      |
 | quit_app                     | <kbd>q</kbd> <kbd>ctrl+q</kbd>                 | Quit app               |
 | command_palette              | <kbd>ctrl+p</kbd>                              | Launch command palette |
 | suspend_app                  | <kbd>ctrl+z</kbd>                              | Suspend app            |
 
 ## alternate layers
+
+### `change_sort_order`
+
+Keybinds related to changing the sort order
+
+| action     | default hotkey | description           |
+| ---------- | -------------- | --------------------- |
+| open_popup | <kbd>,</kbd>   | Open sort order popup |
+| name       | <kbd>a</kbd>   | Sort by name          |
+| extension  | <kbd>e</kbd>   | Sort by extension     |
+| natural    | <kbd>n</kbd>   | Sort naturally        |
+| size       | <kbd>s</kbd>   | Sort by size          |
+| created    | <kbd>c</kbd>   | Sort by created       |
+| modified   | <kbd>m</kbd>   | Sort by modified      |
+| descending | <kbd>d</kbd>   | Toggle descending     |
 
 ### `delete_files`
 
